components/pages/slides/styles.module.scss
/* ... */
.hail-slide {
  width: 100%;
  height: 100%;
  position: relative;
}

.hail {
  color: #fff;
  background: #000000;

  &__content {
    margin: 180px 0 0;
    padding: 0 80px;
    display: flex;
    flex-wrap: nowrap;
    height: 100%;
  }

  &__logo {
    position: absolute;
    width: 155px;
    height: 84px;
    left: 70px;
    top: 37px;

    opacity: 0;
    animation-fill-mode: forwards;
    animation-delay: 0.5s;
  }

  &__title {
    margin: 0;
    font-weight: bolder;
    font-size: 92px;
    line-height: 100%;
    text-align: left;

    animation-delay: 0.7s;
  }

  &__description {
    margin: 20px 0 0 0;
    font-weight: 400;
    font-size: 24px;
    line-height: 31px;
    color: #c5c5c5;
    text-align: left;

    animation-delay: 0.9s;
  }

  &__map-area {
    position: relative;
    padding: 20px 10px;
    animation-delay: 0.9s;
    height: 550px;
  }
}

.roof {
  color: #fff;
  background: rgb(221, 221, 221);
  height: 900px;

  model-viewer {
    width: 400px;
    height: 400px;
  }
}

.impacts {
  model-viewer {
    width: 400px;
    height: 400px;
  }

  &__title {
    font-size: 24px;
    font-weight: bold;
    line-height: 31px;
    margin: 20px 0;
    position: relative;
    color: #505050;
    cursor: pointer;

    &::before {
      content: "";
      position: absolute;
      left: -45px;
      top: 50%;
      transform: translateY(-50%);
      width: 20px;
      height: 20px;
      border-radius: 50%;
      background: #505050;
    }

    &::after {
      content: "";
      position: absolute;
      left: -36px;
      top: 50%;
      border: 0.5px solid;
      height: 55px;
      border-color: #505050;
    }

    &.active {
      font-weight: bolder;
      font-size: 60px;
      line-height: 78px;
      color: #fff;

      &::before {
        left: -50px;
        background: #fff;
        width: 30px;
        height: 30px;
      }

      &::after {
        top: calc(50% + 15px);
        height: 130px;
      }
    }

    &.last {
      &::after {
        content: none;
      }
    }
  }

  &__sub-title {
    font-weight: 400;
    font-size: 18px;
    line-height: 23px;
    width: 75px;
    color: #c5c5c5;
    margin: 0;
  }
}

.exposure {
  model-viewer {
    width: 100%;
    height: 450px;
    margin-top: -50px;
  }

  &__title {
    font-weight: bold;
    font-size: 32px;
    line-height: 42px;
    margin: 20px 0;
    position: relative;
    color: #868686;
    cursor: pointer;

    &::before {
      content: "";
      position: absolute;
      right: -45px;
      top: 50%;
      transform: translateY(-50%);
      width: 20px;
      height: 20px;
      border-radius: 50%;
      background: #868686;
    }

    &::after {
      content: "";
      position: absolute;
      right: -36px;
      top: 50%;
      border: 0.5px solid;
      height: 55px;
      border-color: #868686;
    }

    &.active {
      font-size: 48px;
      line-height: 62.5px;
      color: #fff;

      &::before {
        right: -50px;
        background: #fff;
        width: 30px;
        height: 30px;
      }

      &::after {
        top: calc(50% + 15px);
      }
    }

    &.last {
      &::after {
        content: none;
      }
    }
  }
}

.benefits {
  &__left-circle {
    position: relative;
    border: 1px dashed #075bbd;
    left: 0;
    width: 24%;
    padding-bottom: 24%;
    border-radius: 100%;
    overflow: hidden;

    &::after {
      content: "";
      position: absolute;
      top: 0;
      left: 75%;
      width: 100%;
      height: 100%;
      background: #075bbd;
      border-radius: 100%;
    }

    .list {
      position: relative;
      color: #075bbd;
      font-weight: bold;

      &::before {
        content: "";
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        left: -20px;
        width: 10px;
        height: 10px;
        border-radius: 50%;
        background: #075bbd;
      }

      &::after {
        content: "";
        position: absolute;
        top: 70%;
        left: -16px;
        width: 0px;
        height: 30px;
        border: 0.5px solid #075bbd;
      }

      &.last::after {
        content: none;
      }
    }
  }

  &__right-circle {
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    transform: translate(75%);
    width: 24%;
    padding-bottom: 24%;
    border-radius: 100%;
    background: #000000;

    .list {
      position: relative;
      color: #fff;
      font-weight: bold;

      &::before {
        content: "";
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        right: -20px;
        width: 10px;
        height: 10px;
        border-radius: 50%;
        background: #fff;
      }

      &::after {
        content: "";
        position: absolute;
        top: 70%;
        right: -16px;
        width: 0px;
        height: 30px;
        border: 0.5px solid #fff;
      }

      &.last::after {
        content: none;
      }
    }
  }
}

.experience {
  &__item-container {
    margin-top: 80px;
    width: 90%;
    display: flex;
    flex-wrap: wrap;
    // grid-template-columns: 1fr 1fr;
    grid-gap: 10%;
  }

  &__item {
    flex: 0 0 40%;
    background: #f3f3f3;
    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.25);
    display: flex;
    align-items: center;
    padding: 20px 30px;
    margin-bottom: 50px;
    border-radius: 20px;

    &-icon {
      width: 80px;
      margin-right: 30px;
    }

    &-text {
      margin: 0;
      font-size: 24px;
      font-weight: bolder;
    }
  }
}
/* ... */

